# mcp-web-context

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  chrome-version.txt  compose.yaml  config.yaml  entrypoint.sh  entrypoint_app.sh  logging.yaml  pyproject.toml  requirements-browser.txt  sway_config  terminal_button  terminal_button.sh  terminal_tray.py  update-chrome-version.sh
claude-docs/: intelligent-search-agent-plan.md
container/sway/: Dockerfile  compose.yaml  sway_config
container/xorg/: Dockerfile  compose.yaml  custom_startup.sh  kasmvnc.yaml
docs/: ground-fact-check-plan.md
misc/: test_browser.py  test_markdown_extraction.py
src/: cache.py  main.py
src/mcp_web_context/: cache.py  config.py  main.py  mcp_server.py  scraper.py  search.py  services.py
src/mcp_web_context/agents/: __init__.py  intelligent_search_agent.py  research_agent.py  web_content_analyzer.py
src/mcp_web_context/chat_model/: custom_chatopenai.py
src/mcp_web_context/routers/: agent.py  analysis.py  logs.py  scraping.py  search.py
src/mcp_web_search/: scraper.py  search.py  utils.py
src/mcp_web_search/agents/: web_content_analyzer.py
src/mcp_web_search/routers/: analysis.py  search.py
test/: test_browser.py  test_markdown_extraction.py
tests/: __init__.py  test_agents.py  test_config.py  test_logging_behavior.py  test_logs_route.py
